<resources>
    <string name="app_name">EduSmart</string>
    <string name="codenicely">codenicely</string>
    <string name="tagline">Revolutionising Education</string>
    <string name="failure_message">Something went wrong..Please try again !</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_address">My Address</string>
    <string name="nav_item_my_cart">My Cart</string>
    <string name="nav_item_search_products">Search Products</string>
    <string name="nav_item_my_orders">My Orders</string>
    <!--<string name="nav_item_contact_us">Contact Us</string>-->
    <string name="nav_item_call_us">Call Us</string>

    <string name="nav_item_about_us">About Us</string>
    <string name="nav_item_developers">Developers</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_item_contact_us">contact us</string>
    <string name="login_label">Login</string>
    <string name="Introduction">Join us to discover best and good resources for students at one place</string>
    <string name="title_activity_student_home">StudentHomeActivity</string>
    <string name="submit">Upload</string>
    <string name="take_picture">Camera</string>
    <string name="select_images_gallery">Gallery</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="upload_file">Upload File</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
