<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#02000000"
    android:orientation="vertical"
    android:weightSum="10">

    <ImageView

        android:layout_gravity="center"
        android:id="@+id/edusmart_logo"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSizeLarge"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tagLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/tagline"
        android:textColor="@color/accentOrange"
        android:textSize="@dimen/textSizeSmall" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/codeNicely"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/codenicely"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12dp" />

        <ImageView
            android:id="@+id/codeNicelyLogo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            />

    </LinearLayout>

